--- a/leagues/templates/leagues/index.html
+++ b/leagues/templates/leagues/index.html
@@ -1,32 +1,108 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Sports Leagues</title>
-	</head>
-	<body>
-		<h1>Leagues</h1>
-		<ol>
-			{% for league in leagues %}
-				<li>{{league.name}}</li>
-			{% empty %}
-				<p>No leagues found.  Try <code>python manage.py loaddata data.json</code>, or, if that doesn't work, going <a href="{% url 'make_data' %}">here</a> (but be prepared to wait).</p>
-			{% endfor %}
-		</ol>
-		<h1>Teams</h1>
-		<ol>
-			{% for team in teams %}
-				<li>{{team.location}} {{team.team_name}}</li>
-			{% empty %}
-				<p>No teams found.  Try <code>python manage.py loaddata data.json</code>, or, if that doesn't work, going <a href="{% url 'make_data' %}">here</a> (but be prepared to wait).</p>
-			{% endfor %}
-		</ol>
-		<h1>Players</h1>
-		<ol>
-			{% for player in players %}
-				<li>{{player.first_name}} {{player.last_name}}</li>
-			{% empty %}
-				<p>No teams found.  Try <code>python manage.py loaddata data.json</code>, or, if that doesn't work, going <a href="{% url 'make_data' %}">here</a> (but be prepared to wait).</p>
-			{% endfor %}
-		</ol>
-	</body>
+
+<head>
+	<title>Sports Leagues</title>
+</head>
+
+<body>
+	<h4> 1...all baseball leagues</h4>
+	<ol>
+		{% for baseball  in all_leagues %}
+		<li>{{baseball.name}}</li>
+		{% endfor %}
+	</ol>
+	<h4>2...all womens' leagues</h4>
+	<ol>
+		{% for wleage in wleagues %}
+		<li>{{wleage.name}}</li>
+		{% endfor%}
+	</ol>
+	<h4>3..all leagues where sport is any type of hockey
+	</h4>
+	<ol>
+		{% for league in hockey_leagues %}
+		<li>{{league.sport}}</li>
+		{% endfor %}
+	</ol>
+	<h4>4...all leagues where sport is something OTHER THAN football</h4>
+	<ol>
+		{% for sport_type in allsports %}
+		<li>{{sport_type.sport}}</li>
+		{% endfor %}
+	</ol>
+	<h4>5...all leagues that call themselves "conferences"</h4>
+	<ol>
+		{% for league in conference_leagues %}
+		<li>{{league.name}}</li>
+		{% endfor %}
+	</ol>
+	<h4>6...all leagues in the Atlantic region</h4>
+	<ol>
+		{%for league in all_atlantics %}
+		<li>{{league.name}}</li>
+		{% endfor %}
+	</ol>
+	<h4>7...all teams based in Dallas</h4>
+	<ol>
+		{% for team in dallas_teams %}
+		<li>{{team.team_name}}</li>
+		{% endfor %}
+	</ol>
+	<h4>8...all teams named the Raptors</h4>
+	<ol>
+		{% for team in raptors %}
+		<li>{{team.location}} {{team.team_name}}</li>
+		{% endfor %}
+	</ol>
+	<h4>9...all teams whose location includes "City"</h4>
+	<ol>
+		{% for team in city_teams %}
+		<li>{{team.location}}</li>
+		{% endfor %}
+	</ol>
+	<h4>10...all teams whose names begin with "T"</h4>
+	<ol>
+		{% for team in t_teams %}
+		<li>{{team.team_name}}</li>
+		{% endfor %}
+	</ol>
+	<h4>11...all teams, ordered alphabetically by location</h4>
+	<ol>
+		{% for team in teams_locations %}
+		<li>{{team.location}}</li>
+		{% endfor %}
+	</ol>
+	<h4>12...all teams, ordered by team name in reverse alphabetical order</h4>
+	<ol>
+		{% for team in reverse_teams%}
+		<li>{{team.team_name}}</li>
+		{% endfor %}
+	</ol>
+	<h4>13...every player with last name "Cooper"</h4>
+	<ol>
+		{% for player in cooper_players %}
+		<li>{{player.first_name}} {{player.last_name}}</li>
+		{% endfor %}
+	</ol>
+	<h4>14...every player with first name "Joshua"</h4>
+	<ol>
+		{% for player in ju_players %}
+		<li>{{player.first_name}} {{player.last_name}}</li>
+		{% endfor %}
+	</ol>
+	<h4>15...every player with last name "Cooper" EXCEPT those with "Joshua" as the first name</h4>
+	<ol>
+		{% for cooper in coopers %}
+		<li>{{cooper.first_name}} {{cooper.last_name}}</li>
+		{% endfor %}
+	</ol>
+	<h4>16...all players with first name "Alexander" OR first name "Wyatt"</h4>
+	<ol>
+		{% for alx_wyat in alexwyats %}
+		<li>{{alx_wyat.first_name}}</li>
+		{% endfor %}
+	</ol>
+</body>
+
 </html>
